<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_about">About</string>
    <string name="app_about_fork">Personal relay build based on yueeng/hacg, with local favorites and sync additions.</string>
    <string name="app_cancel">Cancel</string>
    <string name="app_chrome">Open with browser</string>
    <string name="app_close">Close</string>
    <string name="app_copied">Copied %1$s</string>
    <string name="app_copy">Copy</string>
    <string name="app_exit">exit</string>
    <string name="app_exit_confirm">Want to exit?</string>
    <string name="app_list_complete">Nothing more</string>
    <string name="app_list_empty">Empty</string>
    <string name="app_list_failed">Load failed</string>
    <string name="app_list_loading">Loading…</string>
    <string name="app_list_loadmore">Load more</string>
    <string name="app_list_time">Posted on %1$s by %2$s | %3$d Replies</string>
    <string name="app_magnet">Link</string>
    <string name="app_name">HAcg</string>
    <string name="app_network_retry">Request hacg failed, click black cat to retry, or change host in menu.</string>
    <string name="app_ok">OK</string>
    <string name="app_open">Open</string>
    <string name="app_philosophy">Philosophy</string>
    <string name="app_publish">Publish</string>
    <string name="app_save">Save</string>
    <string name="app_search">Search</string>
    <string name="app_search_clear">Clear search history</string>
    <string name="app_search_empty">Please enter search text.</string>
    <string name="app_search_title">Search: %1$s</string>
    <string name="app_settings">Settings</string>
    <string name="app_share">Share</string>
    <string name="app_theme_changed">Theme: %1$s</string>
    <string name="app_theme_day">Day mode</string>
    <string name="app_theme_mode">Theme mode</string>
    <string name="app_theme_night">Night mode</string>
    <string name="app_theme_system">Follow system</string>
    <string name="app_update">Update</string>
    <string name="app_update_check">Check update</string>
    <string name="app_update_download_failed">Download failed</string>
    <string name="app_update_download_missing">No APK asset found in this release.</string>
    <string name="app_update_download_started">Downloading update APK</string>
    <string name="app_update_download_title">HAcg update APK</string>
    <string name="app_update_install_failed">Cannot open installer</string>
    <string name="app_update_install_permission">Please allow this app to install APKs, then return to continue.</string>
    <string name="app_update_new">Update from %1$s to %2$s</string>
    <string name="app_update_none">Version %1$s is newest.</string>
    <string name="app_user">User information</string>
    <string name="app_user_login">Login</string>

    <string name="favorite_add">Favorite</string>
    <string name="favorite_added">Added to favorites</string>
    <string name="favorite_export">Export favorites</string>
    <string name="favorite_export_failed">Export failed</string>
    <string name="favorite_exported">Favorites exported</string>
    <string name="favorite_import">Import favorites</string>
    <string name="favorite_import_failed">Import failed</string>
    <string name="favorite_imported">Imported %1$d favorites</string>
    <string name="favorite_remove">Remove favorite</string>
    <string name="favorite_removed">Removed from favorites</string>
    <string name="favorite_title">Favorites</string>
    <string name="favorite_webdav_download">Import from WebDAV</string>
    <string name="favorite_webdav_failed">WebDAV operation failed</string>
    <string name="favorite_webdav_password">Password</string>
    <string name="favorite_webdav_path">Remote file path</string>
    <string name="favorite_webdav_required">Please configure WebDAV first</string>
    <string name="favorite_webdav_settings">WebDAV settings</string>
    <string name="favorite_webdav_upload">Upload to WebDAV</string>
    <string name="favorite_webdav_uploaded">Uploaded to WebDAV</string>
    <string name="favorite_webdav_url">WebDAV URL</string>
    <string name="favorite_webdav_username">Username</string>

    <string name="comment_author">Author</string>
    <string name="comment_content">Content</string>
    <string name="comment_email">EMail</string>
    <string name="comment_failed">Submit failed</string>
    <string name="comment_refresh">Refresh</string>
    <string name="comment_review">Review</string>
    <string name="comment_review_to">Review: %1$s</string>
    <string name="comment_sort">Reviews sort</string>
    <string name="comment_sort_newest">Latest reviews</string>
    <string name="comment_sort_oldest">Oldest reviews</string>
    <string name="comment_sort_vote">Most votes received comments</string>
    <string name="comment_submit">Submit</string>
    <string name="comment_succeeded">Submit succeeded</string>
    <string name="comment_title">Comment</string>
    <string name="comment_verify">Some fields are empty.</string>

    <string name="permission_write_external_storage">Request write external storage permission.</string>

    <string name="settings_config">Check network config</string>
    <string name="settings_config_auto">Auto choose valid host</string>
    <string name="settings_config_auto_choose">Choose %1$s.</string>
    <string name="settings_config_auto_failed">Auto choose failed</string>
    <string name="settings_config_newest">The config is newest.</string>
    <string name="settings_config_update">Update</string>
    <string name="settings_config_updating">New network config.</string>
    <string name="settings_host">HACG Alternate host</string>
    <string name="settings_host_more">Change host</string>
    <string name="settings_host_reset">Reset all</string>
    <string name="settings_host_sample">Like "www.hacg.me".</string>
</resources>
