<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favorite_import"
        android:title="@string/favorite_import"
        app:showAsAction="never" />
    <item
        android:id="@+id/favorite_export"
        android:title="@string/favorite_export"
        app:showAsAction="never" />
    <item
        android:id="@+id/favorite_webdav_settings"
        android:title="@string/favorite_webdav_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/favorite_webdav_upload"
        android:title="@string/favorite_webdav_upload"
        app:showAsAction="never" />
    <item
        android:id="@+id/favorite_webdav_download"
        android:title="@string/favorite_webdav_download"
        app:showAsAction="never" />
</menu>
